Chore: Update summary for Angel Jaimes
Expanded summary to include personal interests.

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -57,8 +57,9 @@ team:
     email: "angel.jaimes [at] nih [dot] gov"
     education: "B.Sc. — Kennesaw State University, GA"
     summary: >
-      I’m interested in applying comparative approaches to study the 
-      evolution and molecular mechanisms of mammalian piRNAs.
+      I'm interested in applying comparative approaches to study the 
+      evolution and molecular mechanisms of mammalian piRNAs. I like to spend  
+      time outdoors, read, and write in my free time. 
   - name: "Franziska Ahrend, M.Sc."
     preferred_name: "Franziska"
     pronouns: "she/her"
